RESOLVED FIXED276544
[visionOS] Audio in background tabs coming from wrong spatial location
https://bugs.webkit.org/show_bug.cgi?id=276544
Summary [visionOS] Audio in background tabs coming from wrong spatial location
Jer Noble
Reported 2024-07-12 10:54:07 PDT
[visionOS] Audio in background tabs coming from wrong spatial location
Attachments
Jer Noble
Comment 1 2024-07-12 10:54:16 PDT
Jer Noble
Comment 2 2024-07-12 10:57:26 PDT
EWS
Comment 3 2024-07-15 20:55:52 PDT
Committed 280997@main (4b87e63a3ac9): <https://commits.webkit.org/280997@main> Reviewed commits have been landed. Closing PR #30754 and removing active labels.
EWS
Comment 4 2024-07-19 14:48:45 PDT
Committed 280938.78@integration/ci/131470861_4b87e63a3a_safari-7619-branch (555f58ca306f): <https://commits.webkit.org/280938.78@integration/ci/131470861_4b87e63a3a_safari-7619-branch> Reviewed commits have been landed. Closing PR #1392 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.