[visionOS] Audio in background tabs coming from wrong spatial location https://bugs.webkit.org/show_bug.cgi?id=276544 rdar://131470861

Reviewed by Eric Carlson.

A logic error in ::updateSpatialTrackingLabel() set the wrong label on non-visible (backgrounded) WKWebViews.
The layer or renderer's spatialTrackingLabel should only be set to `nil` (the default) when the MediaPlayer
both has a renderer, and is visible. If either of those conditions is not true, the default spatial tracking
label (provided by either WKWebView's content view, or by the client) should be used.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateSpatialTrackingLabel):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::updateSpatialTrackingLabel):
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::updateSpatialTrackingLabel):

Canonical link: https://commits.webkit.org/280997@main